# rust_server

./: .gitignore  Cargo.toml  todo
src/: main.rs  user_database.db3
src/auth/: credentials.rs  hasher.rs  middleware.rs  mod.rs  sessions.rs
src/database/: handler.rs  notes_on_db.txt
src/maintenance/: database_operations.rs  maintainer.rs  mod.rs
src/models/: database_models.rs  mod.rs  server_models.rs
